corrected spacing event images

--- a/style.css
+++ b/style.css
@@ -567,7 +567,6 @@ p {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
   padding-bottom: 50px;
   margin-left: 10%;
   margin-right: 10%;
@@ -883,9 +882,6 @@ p {
     justify-self: center;
     justify-content: center;
     font-size: 4vw;
-
-    /* margin-top: -15%; */
-
-    /* width: 500px; */
+    width: 500px;
   }
 }
